<resources>
    <string name="app_name">Musical Structure AA</string>
    <string name="Mishary">Mishary Image</string>
    <string name="SubTitle">All songs of Mishary</string>
    <string name="qalby">Qalby</string>
    <string name="oyoon">Oyoon</string>
    <string name="haneeny">Haneeny</string>
    <string name="track_remaining">0:00</string>
    <string name="track_total_length">3:11</string>
    <string name="mock_artist">Mishary</string>
    <string name="mock_song_name">Qalby</string>
    <string name="AlbumPoster">Album Poster</string>
    <string name="home">Home</string>

</resources>
