<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:srcCompat="@drawable/mishary"
        android:contentDescription="@string/Mishary" />

    <TextView
        android:id="@+id/allSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/SubTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="All songs of Mishary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/qalby"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/qalby"
                app:srcCompat="@drawable/qalby" />

            <ImageView
                android:id="@+id/oyoon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/oyoon"
                app:srcCompat="@drawable/oyoon" />

            <ImageView
                android:id="@+id/haneeny"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/haneeny"
                android:contentDescription="@string/haneeny" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>