<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/home" />

        <View
            android:id="@+id/divider4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/haneenyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/haneeny" />

        <View
            android:id="@+id/divider5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/qalbyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/qalby" />

        <View
            android:id="@+id/divider6"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/oyoonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/oyoon" />
    </LinearLayout>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@+id/movies_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </ListView>

</LinearLayout>